--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .card {
+        @apply px-4 py-5 sm:p-6 container m-auto overflow-hidden shadow-md sm:rounded-lg;
+    }
+    button {
+        @apply text-sm rounded-md py-2 px-8 text-white font-medium;
+    }
+    label {
+        @apply block text-sm font-medium leading-5 text-gray-700;
+    }
+    input {
+        @apply block w-full px-4 py-2 sm:text-sm sm:leading-5 border border-gray-300 focus:border-blue-500 rounded focus:outline-none focus:ring
+    }
+}
